@@ -84,9 +84,15 @@ EOD;
 		}
 		else
 		{
-			$cmd .= '-channel alpha -fx intensity ' .
-				($invert ? '-channel rgb -negate ' : '') .
-				$rendered_image . ' ' . $final_image;
+			if (!$invert)
+			{
+				$cmd .= '-channel alpha ' . $rendered_image . ' ' . $final_image;
+			}
+			else
+			{
+				$cmd .=	'-channel alpha -fx intensity -channel rgb -negate ' .
+					$rendered_image . ' ' .  $final_image;
+			}
 		}
 
 		$retval = parent::_exec ($cmd);
